# safe-agent

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  llms.txt  moltbook-skill.json  pyproject.toml  server.json
.cursor-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: incident-report.md
.github/actions/safe-agent-review/: action.yml
.github/workflows/: adversarial-eval.yml  analytics.yml  release.yml  safe-agent-pr-review.yml  safe-agent-preview.yml  tests.yml
.well-known/: agent.json
agents/: safe-agent-reviewer.md
commands/: run-safe-agent-pr-gate.md
docs/: adversarial-suite-v1.json  compatibility-matrix.md  eu-ai-act-compliance.md  github-action-guide.md  implementation-roadmap.md  insurance-integration.md  monday-assignment-packet.md  policy-presets.md  release-go-no-go-checklist.md  sprint1-progress.md  sprint1-task1-review.md  stage2-smoke-2026-02-16.md  stage2-smoke-2026-02-18.md  takeoff-strategy.md  whats-new-v0.4.1.md  whats-new-v0.4.2.md  whats-new-v0.4.3.md  whats-new-v0.4.4.md
docs/incident-reports/: 2025-07-cursor-yolo-mode.md  2025-07-replit-saastr.md  README.md  TEMPLATE.md
experiments/: experiments.csv
marketing/: README.md  demo.cast
rules/: safe-agent-risk-gate.mdc
scripts/: check_release_surface.py  run_stage2_smoke.sh
skills/safe-agent-ci/: SKILL.md
src/safe_agent/: __init__.py  adversarial.py  agent.py  cli.py  demo.py  demo_cli.py  diff_gate.py  marketing.py  marketing_cli.py  mcp_server.py
tests/: conftest.py  test_adversarial.py  test_agent.py  test_audit_export.py  test_ci_reporting.py  test_cli.py  test_cursor_plugin.py  test_eu_compliance.py  test_governance_policy.py  test_marketing_summary.py  test_path_safety.py  test_policy.py  test_release_surface.py
