[project]
name = "safe-agent-cli"
version = "0.2.0"
description = "An AI coding agent you can actually trust - with built-in impact preview"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Agent Polis Contributors"}
]
keywords = ["ai", "agent", "coding", "safety", "preview", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "impact-preview>=0.2.1",
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

# MCP Registry name (required for publishing)
[tool.mcp]
name = "io.github.agent-polis/safe-agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Agent Polis Contributors"}
]
keywords = ["ai", "agent", "coding", "safety", "preview", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "impact-preview>=0.2.1",
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/agent-polis/safe-agent"
Repository = "https://github.com/agent-polis/safe-agent"

[project.scripts]
safe-agent = "safe_agent.cli:main"
safe-agent-mcp = "safe_agent.mcp_server:run"
safe-agent-marketing = "safe_agent.marketing_cli:main"
safe-agent-demo = "safe_agent.demo_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safe_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
